example .env extended according to changes in the main class

--- a/spec/data/connect.env
+++ b/spec/data/connect.env
@@ -1,6 +1,9 @@
-DB_HOST=dwh.example.com
-DB_NAME=archive
+DB_HOST=mus-db.example.com
+DB_DESCR=musical\ archive\ \"The\ best\ of\ XX\'th\ century\ music\" 
+DB_NAME=mus_archive
 DB_PASS="Copper's1r0n"
 DB_LOGIN=Daedalus
 ON_CONN=' UPDATE status SET value="connected" WHERE user="Daedalus" '
 ON_DISCON=' UPDATE status SET value="disconnected" WHERE user="Daedalus" '
+DBL_QUOTED=" Double \\\"quoted\" string"
+TOP_SONG=Mambo#5
